--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -800,3 +800,12 @@ a {
   }
 }
 
+@media (max-width: 640px) {
+  .brand-text {
+    display: none;
+  }
+
+  .brand-logo {
+    height: 36px;
+  }
+}
